src/test/deca/syntax/invalid/lexer/identifier_lex-lex.corr
IDENT: [@0,229:231='int',<47>,13:0]
CLASS: [@1,233:237='class',<26>,14:0]
IDENT: [@2,239:242='void',<47>,15:0]
IDENT: [@3,244:248='float',<47>,16:0]
IDENT: [@4,250:255='string',<47>,17:0]
IDENT: [@5,257:262='blabla',<47>,18:0]
IDENT: [@6,264:266='int',<47>,19:0]
IDENT: [@7,268:270='int',<47>,19:4]
IDENT: [@8,272:274='int',<47>,20:0]
IDENT: [@9,276:276='x',<47>,20:4]
IDENT: [@10,278:281='____',<47>,21:0]
IDENT: [@11,283:286='$$$$',<47>,22:0]
IDENT: [@12,288:297='$123456789',<47>,23:0]
IDENT: [@13,299:304='abcABC',<47>,24:0]
IDENT: [@14,306:308='a1$',<47>,25:0]
IDENT: [@15,310:317='admin123',<47>,26:0]
INT: [@16,362:363='12',<45>,29:0]
IDENT: [@17,364:373='identifier',<47>,29:2]
